# libkgt

./: CMakeLists.txt  LICENSE  README.MD
libkgt/: CMakeLists.txt  dll.h  dll_win32.c  gpu.h  gpu_d3d9.c  hosts.c  hosts.h  main.h  main_dummy.c  main_win32.c  nuklear.c  nuklear.h  nuklear_d3d9.h  nuklear_xlib_gl2.h  pattern.c  pattern.h  pch.h  process.h  process_win32.c  rez.h  rez_win32.c  ui.h  ui_win32.c  utls.c  utls.h  utls.inl  win32_internal.h
tests/: CMakeLists.txt
tests/test_app_to_memedit/: CMakeLists.txt  test_app_to_memedit.c
tests/test_pattern_parse/: CMakeLists.txt  test_pattern_parse.c
tests/test_pattern_searchinmemory/: CMakeLists.txt  test_pattern_searchinmemory.c
tests/test_pattern_spawnprocess_editmem/: CMakeLists.txt  test_pattern_spawnprocess_editmem.c
tests/test_ui_native/: test_ui_native.c
tests/test_ui_nativeskinned/: Resource.aps  Resource.rc  resource.h  test_ui_nativeskinned.c
tests/test_ui_nuklear/: test_ui_nuklear.c
